deployments/k8s/deploymentSinglePod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ese-companion
  labels:
    app: ese-companion
spec:
  containers:
  - name: ese-companion
    image: ese-companion:latest
    imagePullPolicy: Always
    ports:
      - name: ui
        containerPort: 3001
        protocol: TCP
      - name: ui-tls
        containerPort: 4001
        protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: ese-companion
  labels:
    app: ese-companion
spec:
  ports:
    - protocol: TCP
      name: ui
      port: 80
      targetPort: ui
    - protocol: TCP
      name: ui-tls
      port: 443
      targetPort: ui-tls
  type: LoadBalancer
  selector:
    app: ese-companion
