deployments/k8s/ingressTraefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: esecompanion-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`you public fqdn`)
      kind: Rule
      services:
        - name: ese-companion
          port: 80
